# AICamera

./: README.md
Notebooks/CNN/: audio_test.ipynb  data_trainning.ipynb
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/mathinf/neustyle/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ATen/: Config.h  Functions.h  NativeFunctions.h  TypeDefault.h  TypeExtendedInterface.h
app/src/main/cpp/caffe2/core/: macros.h
app/src/main/cpp/caffe2/proto/: caffe2.pb.h  torch.pb.h
app/src/main/java/facebook/f8demo/: ClassifyCamera.java
app/src/main/java/mathinf/neustyle/: ClassifyCamera.java  NeuStyleCamera.java
app/src/main/jniLibs/: README.md
app/src/main/res/layout/: activity_classify_camera.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mathinf/neustyle/: ExampleUnitTest.java
